# GETS-Logistics-API

./: .coverage  .gitignore  .vercel_deploy  AGENTS.md  AIRTABLE_TEST_REPORT.md  ARCHITECTURE.md  CHATGPT_ACTIONS_INTEGRATION_REPORT.md  CHATGPT_SCHEMA_GUIDE.md  CLEANUP_REPORT.md  COVERAGE_IMPROVEMENT_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_REPORT.md  DUAL_API_SETUP_GUIDE.md  DUAL_SCHEMA_COMPLETION_REPORT.md  ExecSummary.MD  GETS API Vercel 배포 - 전체 작업 요약.md  GPT_CONVERSATION_STARTERS.md  PHASE_2_1_IMPLEMENTATION.md  PHASE_2_2_IMPLEMENTATION.md  PHASE_4_1_COMPLETION_REPORT.md  PHASE_4_1_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  SCHEMA_LOCK_v2.0_COMPLETION_REPORT.md  SPECPACK_V1_IMPLEMENTATION.md  SYSTEM_ARCHITECTURE.md  TEST_EXECUTION_LOG.md  TEST_EXECUTION_SUMMARY.md  TEST_REPORT_PHASE_2_3.md  TEST_RESULTS_SUMMARY.md  Untitled-2.py  VERCEL_DEPLOYMENT_GUIDE.md  openapi-gets-api.yaml  openapi-schema.yaml  patch.md  patch2.md  patch3.md  patch5.md  plan.md  pytest.ini  (+9 more)
cursor_only_pack_gets_v1/: AGENTS.md  ARCHITECTURE.md  README.md  plan.md  pyproject.toml
cursor_only_pack_gets_v1/.cursor/commands/: automate-precommit-ci.md
cursor_only_pack_gets_v1/.cursor/config/: workspace.json
cursor_only_pack_gets_v1/.cursor/hooks/: preload_docs.yaml
cursor_only_pack_gets_v1/config/: project_profile.yaml
cursor_only_pack_gets_v1/cursor_only_pack_gets_v1/: .pre-commit-config.yaml  CODEOWNERS
cursor_only_pack_gets_v1/scripts/: deploy_preflight.sh
cursor_only_pack_gets_v1/src/core/: app.py
cursor_only_pack_gets_v1/tests/: test_scaffold_exists.py
(+96 files in other folders)
