[project]
name = "gets-logistics-api"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

[tool.pytest.ini_options]
addopts = "-q --strict-markers --maxfail=1"

[tool.coverage.run]
source = ["src", "api"]
branch = true

[tool.coverage.report]
fail_under = 85
precision = 2
show_missing = true

[tool.ruff]
line-length = 100
fix = true
show-fixes = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
